--- a/VLingPai/Controller/StartViewController.xib
+++ b/VLingPai/Controller/StartViewController.xib
@@ -25,13 +25,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view hidden="YES" contentMode="scaleToFill" id="i2n-eA-9hM">
-                    <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                    <rect key="frame" x="0.0" y="423" width="320" height="57"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="S7b-Rg-MRH">
-                            <rect key="frame" x="14" y="7" width="292" height="30"/>
+                            <rect key="frame" x="20" y="-3" width="280" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.0" green="0.67130474449999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.22352941179999999" green="0.4941176471" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="忘记手势密码？">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
