--- a/VLingPai/Controller/AboutViewController.xib
+++ b/VLingPai/Controller/AboutViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AboutViewController">
             <connections>
+                <outlet property="imageIcon" destination="wFG-Da-YK3" id="b5R-cW-pyB"/>
                 <outlet property="labVersion" destination="UW5-aD-RQy" id="fcC-pp-UKQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
